[tool.poetry]
name = "new_poetry"
version = "0.1.0"
description = ""
authors = ["lyuben.trifonov <lyuben.trifonov@profilink.eu>"]

[tool.poetry.dependencies]
python = "3.8.13"
pantab = "^2.1.1"
pandas = "^1.4.3"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
